--- a/mage_ai/data_preparation/templates/callbacks/base.jinja
+++ b/mage_ai/data_preparation/templates/callbacks/base.jinja
@@ -12,5 +12,9 @@ def success_callback(parent_block_data, **kwargs):
 
 @callback('failure')
 def failure_callback(parent_block_data, **kwargs):
+    """
+    The error that caused the block to fail is passed in as keyword
+    argument __error.
+    """
     pass
 {% endblock %}
