--- a/docs/_css/main.css
+++ b/docs/_css/main.css
@@ -1,14 +1,14 @@
-img {
+#content-area img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 85%;
-    border-radius: 3px;
-    box-shadow: 0px 1px 2px 0px rgba(76,34,192,0.3),
-            1px 2px 4px 0px rgba(76,34,192,0.3),
-            2px 4px 8px 0px rgba(76,34,192,0.3),
-            2px 4px 16px 0px rgba(76,34,192,0.3);
 }
+
+img.inline {
+    border-radius: 5px;
+    max-width: 90%;
+}
+
 img.hero {
-    max-height: 400px;
+    max-height: 300px;
   }
