--- a/mage_ai/frontend/styles/globals.css
+++ b/mage_ai/frontend/styles/globals.css
@@ -571,6 +571,12 @@ textarea {
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'codicon';
+  src: url('/monaco-editor/min/vs/base/browser/ui/codicons/codicon/codicon.ttf') format('truetype');
+}
+
+
 .react-calendar {
   width: 350px;
   max-width: 100%;
