--- a/mage_ai/frontend/styles/scss/globals.scss
+++ b/mage_ai/frontend/styles/scss/globals.scss
@@ -116,7 +116,7 @@ a {
 }
 
 body {
-  background-color: #1E1F24;
+  background-color: #000000;
   line-height: 1;
 
   -webkit-font-smoothing: antialiased;
@@ -132,11 +132,11 @@ ul {
 }
 
 ul {
-  padding-left: 24px;
+  padding-left: 0;
 }
 
 ol {
-  padding-left: 32px;
+  padding-left: 0;
 }
 
 blockquote,
@@ -277,9 +277,9 @@ form {
  */
 
 fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
+  border: none;
+  margin: 0;
+  padding: 0;
 }
 
 /**
@@ -294,7 +294,7 @@ legend {
   padding: 0;
   white-space: normal;
   /* 2 */
-  *margin-left: -7px;
+  *margin-left: 0;
   /* 3 */
 }
 
@@ -413,7 +413,7 @@ input[type="radio"] {
 
 /* appearance for checked radiobutton */
 input[type="radio"]:checked {
-  background-color: #2A60FE;
+  background-color: #000000;
 }
 
 /**
@@ -477,16 +477,16 @@ button,
 input,
 select,
 textarea {
-  color: #222;
+  color: #000000;
 }
 
 ::-moz-selection {
-  background: #b3d4fc;
+  background: red;
   text-shadow: none;
 }
 
 ::selection {
-  background: rgba(56, 107, 233, 0.25);
+  background: blue;
   text-shadow: none;
 }
 
@@ -506,58 +506,46 @@ textarea {
 
 .chromeframe {
   margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
+  background: #FFFFFF;
+  color: #000000;
   padding: 0.2em 0;
 }
 
 @font-face {
-  font-family: 'Roboto Thin';
-  font-style: normal;
-  font-weight: 100;
-  src: url('/fonts/Roboto/Roboto-Thin.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto Light';
-  font-style: normal;
+  font-family: 'Inter Light';
+  src: url('/fonts/Inter/Inter-Light.ttf') format('truetype');
   font-weight: 300;
-  src: url('/fonts/Roboto/Roboto-Light.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto Regular';
   font-style: normal;
+}
+@font-face {
+  font-family: 'Inter Regular';
+  src: url('/fonts/Inter/Inter-Regular.ttf') format('truetype');
   font-weight: 400;
-  src: url('/fonts/Roboto/Roboto-Regular.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto Medium';
   font-style: normal;
+}
+@font-face {
+  font-family: 'Inter Medium';
+  src: url('/fonts/Inter/Inter-Medium.ttf') format('truetype');
   font-weight: 500;
-  src: url('/fonts/Roboto/Roboto-Medium.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto Bold';
   font-style: normal;
+}
+@font-face {
+  font-family: 'Inter SemiBold';
+  src: url('/fonts/Inter/Inter-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Inter Bold';
+  src: url('/fonts/Inter/Inter-Bold.ttf') format('truetype');
   font-weight: 700;
-  src: url('/fonts/Roboto/Roboto-Bold.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto Mono Regular';
   font-style: normal;
-  font-weight: 400;
-  src: url('/fonts/Roboto_Mono/RobotoMono-VariableFont_wght.ttf') format('truetype');
 }
-
 @font-face {
-  font-family: 'Roboto Mono Bold';
+  font-family: 'Inter Black';
+  src: url('/fonts/Inter/Inter-Black.ttf') format('truetype');
+  font-weight: 900;
   font-style: normal;
-  font-weight: 700;
-  src: url('/fonts/Roboto_Mono/RobotoMono-VariableFont_wght.ttf') format('truetype');
 }
 
 @font-face {
@@ -566,240 +554,45 @@ textarea {
   font-weight: 300;
   font-style: normal;
 }
-
 @font-face {
   font-family: 'Fira Code Regular';
   src: url('/fonts/Fira_Code/ttf/FiraCode-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
-
 @font-face {
   font-family: 'Fira Code Retina';
   src: url('/fonts/Fira_Code/ttf/FiraCode-Retina.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
-
 @font-face {
   font-family: 'Fira Code Regular Italic';
   src: url('/fonts/Fira_Code/ttf/FiraCode-RegularItalic.ttf') format('truetype');
   font-weight: 400;
   font-style: italic;
 }
-
 @font-face {
   font-family: 'Fira Code Medium';
   src: url('/fonts/Fira_Code/ttf/FiraCode-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
 }
-
 @font-face {
   font-family: 'Fira Code Semibold';
   src: url('/fonts/Fira_Code/ttf/FiraCode-SemiBold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
 }
-
 @font-face {
   font-family: 'Fira Code Bold';
   src: url('/fonts/Fira_Code/ttf/FiraCode-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
-
 @font-face {
   font-family: 'Fira Code Bold Italic';
   src: url('/fonts/Fira_Code/ttf/FiraCode-BoldItalic.ttf') format('truetype');
   font-weight: 700;
   font-style: italic;
-}
-
-@font-face {
-  font-family: 'codicon';
-  src: url('/fonts/codicon/codicon.ttf') format('truetype');
-}
-
-
-.react-calendar {
-  width: 350px;
-  max-width: 100%;
-  background: transparent;
-  border-radius: 16px;
-  font-family: 'Fira Code Regular';
-  line-height: 1.125em;
-  color: white;
-}
-
-.react-calendar--doubleView {
-  width: 700px;
-}
-
-.react-calendar--doubleView .react-calendar__viewContainer {
-  display: flex;
-  margin: -0.5em;
-}
-
-.react-calendar--doubleView .react-calendar__viewContainer>* {
-  width: 50%;
-  margin: 0.5em;
-}
-
-.react-calendar,
-.react-calendar *,
-.react-calendar *:before,
-.react-calendar *:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.react-calendar button {
-  margin: 0;
-  border: 0;
-  outline: none;
-}
-
-.react-calendar button:enabled:hover {
-  cursor: pointer;
-}
-
-.react-calendar__navigation {
-  display: flex;
-  height: 44px;
-  margin-bottom: 1em;
-}
-
-.react-calendar__navigation button {
-  min-width: 44px;
-  background: none;
-  border-radius: 8px;
-}
-
-.react-calendar__navigation button:disabled {
-  background-color: #f0f0f0;
-}
-
-.react-calendar__navigation button:enabled:hover,
-.react-calendar__navigation button:enabled:focus {
-  background-color: #4E4E4E;
-}
-
-.react-calendar__navigation__next-button {
-  color: white;
-}
-
-.react-calendar__navigation__next2-button {
-  color: white;
-}
-
-.react-calendar__navigation__prev-button {
-  color: white;
-}
-
-.react-calendar__navigation__prev2-button {
-  color: white;
-}
-
-.react-calendar__navigation__label {
-  color: white;
-}
-
-.react-calendar__decade-view__years__year {
-  color: white;
-}
-
-.react-calendar__year-view__months__month {
-  color: white;
-}
-
-.react-calendar__month-view__weekdays {
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 0.75em;
-}
-
-.react-calendar__month-view__weekdays__weekday {
-  padding: 0.5em;
-  color: white;
-}
-
-.react-calendar__month-view__weekNumbers .react-calendar__tile {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 0.75em;
-  font-weight: bold;
-}
-
-.react-calendar__month-view__days__day {
-  color: white;
-  border-radius: 4px;
-}
-
-.react-calendar__month-view__days__day--weekend {
-  color: white;
-  border-radius: 4px;
-}
-
-.react-calendar__month-view__days__day--neighboringMonth {
-  color: #757575;
-}
-
-.react-calendar__year-view .react-calendar__tile,
-.react-calendar__decade-view .react-calendar__tile,
-.react-calendar__century-view .react-calendar__tile {
-  padding: 2em 0.5em;
-}
-
-.react-calendar__tile {
-  max-width: 100%;
-  padding: 10px 6.6667px;
-  background: none;
-  text-align: center;
-  line-height: 16px;
-  border-radius: 8px;
-}
-
-.react-calendar__tile:disabled {
-  background-color: #f0f0f0;
-}
-
-.react-calendar__tile:enabled:hover,
-.react-calendar__tile:enabled:focus {
-  background-color: #4E4E4E;
-}
-
-.react-calendar__tile--now {
-  background: #232429;
-}
-
-.react-calendar__tile--now:enabled:hover,
-.react-calendar__tile--now:enabled:focus {
-  background: #232429;
-}
-
-.react-calendar__tile--hasActive {
-  background: #006edc;
-}
-
-.react-calendar__tile--hasActive:enabled:hover,
-.react-calendar__tile--hasActive:enabled:focus {
-  background: #6cadee;
-}
-
-.react-calendar__tile--active {
-  background: #006edc;
-  color: white;
-}
-
-.react-calendar__tile--active:enabled:hover,
-.react-calendar__tile--active:enabled:focus {
-  background: #1087ff;
-}
-
-.react-calendar--selectRange .react-calendar__tile--hover {
-  background-color: #4E4E4E;
 }
