--- a/mage_ai/frontend/styles/scss/base/_borders.scss
+++ b/mage_ai/frontend/styles/scss/base/_borders.scss
@@ -1,13 +1,16 @@
 // styles/borders -> base/borders
+@use '../abstracts/colors';
+@use '../abstracts/variables';
+
 @mixin shared {
-  border-radius: $borders-radius-base;
-  border-style: $borders-style;
-  border-width: $borders-width;
+  border-radius: variables.$borders-radius-base;
+  border-style: variables.$borders-style;
+  border-width: variables.$borders-width;
 }
 
 @mixin base($muted: false) {
   @include shared;
-  border-color: if($muted, $borders-color-muted-default, $borders-color-base-default);
+  border-color: if($muted, colors.$borders-color-muted-default, colors.$borders-color-base-default);
 }
 
 @mixin borders-transparent {
