--- a/mage_ai/frontend/styles/scss/abstracts/_mixins.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/_mixins.scss
@@ -2,7 +2,7 @@
 @import '../abstracts/colors';
 
 @mixin transition {
-  transition: 0.2s all $ease-in-out;
+  transition: 0.2s all ease-in-out;
 }
 
 @mixin transition-fast {
