--- a/mage_ai/frontend/styles/scss/globals/dark.scss
+++ b/mage_ai/frontend/styles/scss/globals/dark.scss
@@ -1,4 +1,6 @@
 /* https://www.zaratan.fr/next-refactor-theme-scss */
+@import '../abstracts/colors';
+@import '../abstracts/variables';
 
 html,
 body,
