[td] Fix app manager and app loading

--- a/mage_ai/frontend/styles/scss/components/Button/Interactive/useButton.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Button/Interactive/useButton.module.scss
@@ -1,13 +1,9 @@
 .container {
-  height: 100vh;
-  overflow: hidden;
-  width: 100vw;
-
-  &.expanded {
+  .visible {
     visibility: visible;
   }
 
-  &.collapsed {
+  .hidden {
     display: none;
     height: 0;
     visibility: hidden;
